src/app/blog-articles.component.css
a {
    text-decoration: none;
    color: black;
}

.container {
    max-width: max-content;
}

.text1 {
    font-size: 1.2rem;
    text-align: justify;
    color: grey
}

.text2 {
    color: grey
}

.margin-left {
    margin-left: 10%;
}

@media screen and (max-width: 767px) {
    img {
        width: 100%;
    }
    h3 {
        font-size: 1.5rem;
        font-weight: bold;
    }
    .text1 {
        font-size: 1rem;
    }
    .text2 {
        font-size: 1rem;
    }
}

@media screen and (min-width: 768px) and (max-width: 992px) {
    img {
        width: 100%;
    }
    h3 {
        font-size: 1.2rem;
        font-weight: bold;
    }
    .text1 {
        font-size: 1rem;
    }
    .text2 {
        font-size: 1rem;
    }
}

@media screen and (min-width: 993px) {
    h3 {
        font-size: 1.2rem;
        font-weight: bold;
    }
    .text1 {
        font-size: 1rem;
    }
    .text2 {
        font-size: 1rem;
    }
}

@media screen and (max-width: 1420px) {
    .margin-left {
        margin-left: 0%
    }
}

